--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
     "@tensorflow/tfjs": "^4.19.0",
+    "body-parser": "^1.20.2",
     "express": "^4.19.2",
-    "multer": "^1.4.5-lts.1"
-  }
+    "multer": "^1.4.5-lts.1",
+    "serve-favicon": "^2.5.0"
+  },
+  "main": "server.js"
 }
