--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "@tensorflow/tfjs": "^4.19.0",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
+    "fs-extra": "^11.2.0",
     "multer": "^1.4.5-lts.1",
+    "multiparty": "^4.2.3",
     "serve-favicon": "^2.5.0"
   },
   "main": "server.js"
