--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@tensorflow/tfjs": "^4.19.0",
     "body-parser": "^1.20.2",
+    "exifr": "^7.1.3",
     "express": "^4.19.2",
     "fs-extra": "^11.2.0",
     "multer": "^1.4.5-lts.1",
