--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "body-parser": "^1.20.2",
     "exifr": "^7.1.3",
     "express": "^4.19.2",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "fs-extra": "^11.2.0",
     "multer": "^1.4.5-lts.1",
     "multiparty": "^4.2.3",
