--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "fs-extra": "^11.2.0",
+    "heic-convert": "^2.1.0",
     "multer": "^1.4.5-lts.1",
     "multiparty": "^4.2.3",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "util": "^0.12.5"
   },
   "main": "server.js"
 }
