--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "express-rate-limit": "^7.3.0",
     "express-validator": "^7.1.0",
     "ffmpeg-static": "^5.2.0",
+    "file-type": "^19.0.0",
     "fluent-ffmpeg": "^2.1.3",
     "fs-extra": "^11.2.0",
     "heic-convert": "^2.1.0",
+    "mime": "^4.0.3",
+    "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
     "multiparty": "^4.2.3",
     "serve-favicon": "^2.5.0",
